[gd_scene load_steps=20 format=3 uid="uid://dsvcd2m5so1o1"]

[ext_resource type="Script" path="res://scenes/scripts/main_menu_inter.gd" id="1_bvdxf"]
[ext_resource type="PackedScene" uid="uid://dsvkbxp4kso86" path="res://enemies/button_play.tscn" id="2_4xdfe"]
[ext_resource type="Script" path="res://scenes/scripts/day_night_2.gd" id="2_q0t7c"]
[ext_resource type="Texture2D" uid="uid://cc7t2pmj3xv2k" path="res://sprites/daynightcycle-gradient-texture.tres" id="3_75waf"]
[ext_resource type="Script" path="res://scenes/scripts/camera_2d2.gd" id="4_7ada3"]
[ext_resource type="Script" path="res://scenes/scripts/camera_effects.gd" id="5_3agpu"]
[ext_resource type="PackedScene" uid="uid://c86ohxnlg8a" path="res://player/dash_stamina.tscn" id="6_gqxd8"]
[ext_resource type="PackedScene" uid="uid://d4eb43rmirjs8" path="res://scenes/score.tscn" id="7_kqkm7"]
[ext_resource type="Shader" path="res://shaders/border.gdshader" id="12_7ev4j"]
[ext_resource type="Texture2D" uid="uid://dxtjq3g4ucke7" path="res://sprites/bg_mainmenu.png" id="18_8dd7y"]
[ext_resource type="PackedScene" uid="uid://cefk00qrd2w1n" path="res://player/ghost_player.tscn" id="19_2dmvf"]
[ext_resource type="AudioStream" uid="uid://c0o0nrc7kgl0t" path="res://SFX/possessed_dies2.ogg" id="20_1itpp"]
[ext_resource type="AudioStream" uid="uid://i6mb63m4vyaa" path="res://SFX/possessed_hit2.ogg" id="22_j2qng"]

[sub_resource type="Curve2D" id="Curve2D_l6exe"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -84, -83, 0, 0, 0, 0, 332.663, -99.5643, 0, 0, 0, 0, 1254, -80, 0, 0, 0, 0, 1256, 969, 0, 0, 0, 0, -96, 960, 0, 0, 0, 0, -84, -83)
}
point_count = 6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rmbww"]
shader = ExtResource("12_7ev4j")
shader_parameter/rect_size = Vector2(1.935, 0.145)
shader_parameter/bness = 5.45
shader_parameter/fall_off_scale = 6.385
shader_parameter/b_offset = 0.08
shader_parameter/speed = 3.188
shader_parameter/noise_intensity = 0.553

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rwpst"]
random_pitch = 1.19
streams_count = 1
stream_0/stream = ExtResource("20_1itpp")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gamfg"]
size = Vector2(1252, 848)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldot6"]
size = Vector2(1217, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8ebb"]
size = Vector2(30, 984)

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 5.0
offset_right = 3.0
offset_bottom = 5.0
size_flags_horizontal = 6
size_flags_vertical = 3
script = ExtResource("1_bvdxf")

[node name="button_play" parent="." instance=ExtResource("2_4xdfe")]
z_index = -1
position = Vector2(574, 263)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.620761, 0.629444, 0.767957, 1)

[node name="CanvasModulate2" type="CanvasModulate" parent="."]
visible = false
z_index = 1
position = Vector2(576, 432)
scale = Vector2(3.87, 3.87)
script = ExtResource("2_q0t7c")
gradient_texture = ExtResource("3_75waf")

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
top_level = true
position = Vector2(584, 449)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("4_7ada3")

[node name="Path2D" type="Path2D" parent="Camera2D"]
position = Vector2(-525, -408)
scale = Vector2(0.920002, 0.96)
curve = SubResource("Curve2D_l6exe")

[node name="PathFollow2D" type="PathFollow2D" parent="Camera2D/Path2D"]
unique_name_in_owner = true
position = Vector2(-84, -83)
rotation = -0.0397337

[node name="CameraControl" type="Control" parent="."]
unique_name_in_owner = true
layout_direction = 1
layout_mode = 1
anchors_preset = 0
pivot_offset = Vector2(579, 423)
script = ExtResource("5_3agpu")
metadata/_edit_use_anchors_ = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 0.7
autostart = true

[node name="FireFlySpawnTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Stamina" parent="UI" instance=ExtResource("6_gqxd8")]
z_index = 6
offset_left = 150.0
offset_top = 33.0
offset_right = 150.0
offset_bottom = 33.0

[node name="Score" parent="UI" instance=ExtResource("7_kqkm7")]

[node name="Border" type="CanvasGroup" parent="UI"]
modulate = Color(1, 1, 1, 0.235294)
self_modulate = Color(0.535276, 0.299479, 0.895856, 1)
position = Vector2(-4, 10)

[node name="ColorRect" type="ColorRect" parent="UI/Border"]
material = SubResource("ShaderMaterial_rmbww")
offset_left = -7.0
offset_top = -182.0
offset_right = 33.0
offset_bottom = -142.0
scale = Vector2(30.04, 8)

[node name="ColorRect2" type="ColorRect" parent="UI/Border"]
material = SubResource("ShaderMaterial_rmbww")
offset_left = 96.0
offset_top = -182.0
offset_right = 136.0
offset_bottom = -142.0
rotation = 1.57079
scale = Vector2(30.04, 8)

[node name="ColorRect4" type="ColorRect" parent="UI/Border"]
material = SubResource("ShaderMaterial_rmbww")
offset_left = 1380.0
offset_top = -182.0
offset_right = 1420.0
offset_bottom = -142.0
rotation = 1.57079
scale = Vector2(30.04, 8)

[node name="ColorRect3" type="ColorRect" parent="UI/Border"]
material = SubResource("ShaderMaterial_rmbww")
offset_left = -7.0
offset_top = 754.0
offset_right = 33.0
offset_bottom = 794.0
scale = Vector2(30.04, 8)

[node name="bg_main_menu" type="Sprite2D" parent="."]
z_index = -9
position = Vector2(576, 440)
texture = ExtResource("18_8dd7y")

[node name="GhostPlayer" parent="." instance=ExtResource("19_2dmvf")]
z_index = 2
position = Vector2(213, 687)

[node name="possessed_dies" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(0.445, 0.445)
stream = SubResource("AudioStreamRandomizer_rwpst")
pitch_scale = 1.22

[node name="possessed_hit" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(0.445, 0.445)
stream = ExtResource("22_j2qng")
pitch_scale = 2.16

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
collision_layer = 15
collision_mask = 15

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D2"]
position = Vector2(997.86, 548)
scale = Vector2(1.03, 1.03)
build_mode = 1
polygon = PackedVector2Array(220, 367, -1064.91, 366.019, -1064.91, -466.019, -954.233, -465.049, -954.233, 298.058, 144.796, 298.058, 143.825, -473.786, -1063.94, -473.786, -1039.67, -561.165, 214.699, -561.165)

[node name="camera_balance" type="Area2D" parent="."]
visible = false

[node name="collision" type="CollisionShape2D" parent="camera_balance"]
position = Vector2(577, 436)
shape = SubResource("RectangleShape2D_gamfg")
disabled = true

[node name="PossessedEscapes" type="Area2D" parent="."]
collision_layer = 17
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="PossessedEscapes"]
position = Vector2(576, -24)
shape = SubResource("RectangleShape2D_ldot6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PossessedEscapes"]
position = Vector2(583, 939)
shape = SubResource("RectangleShape2D_ldot6")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PossessedEscapes"]
position = Vector2(-33, 443)
shape = SubResource("RectangleShape2D_g8ebb")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="PossessedEscapes"]
position = Vector2(1212, 435)
shape = SubResource("RectangleShape2D_g8ebb")

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="FireFlySpawnTimer" to="." method="_on_fire_fly_spawn_timer_timeout"]
